manifest/deploy/kustomize/overlays/develop/gateway-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: gateway
