manifest/deploy/kustomize/overlays/develop/history-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-service
spec:
  replicas: 1
