manifest/deploy/kustomize/overlays/develop/worker-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: worker
