manifest/deploy/kustomize/overlays/develop/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
    - host: dev.go-ai-talk.local
